fixed squished footer

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -23,5 +23,9 @@ footer {
     align-items: center;
 
     color: #0371b7;
+
+    span {
+      margin-left: 10px;
+    }
   }
 }
